# pypop

./: .gitignore  .readthedocs.yaml  A-PPT-Report-on-PyPop7.pptx  CODE_OF_CONDUCT.md  README.md  demo.py  repeat_opoc.py  requirements.txt  setup.cfg
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml  test-refactoring-1.yml  test-refactoring-2.yml  test-refactoring-3.yml  test-refactoring.yml
benchmarks/: base_functions.py  continuous_functions.py  generate_rotation_matrices.py  generate_shift_vectors.py  rotated_functions.py  run_experiments.py  shifted_functions.py  test_base_functions.py  test_cases.py  test_continuous_functions.py  test_rotated_functions.py  test_shifted_functions.py  test_utils.py  utils.py
docs/: A-PPT-Report-on-PyPop7.pptx  README.md
docs/WeChat/: WeChatGroup.md
docs/data-science/: README.md  _test_data_science.py  _test_data_science_ray.py  data_science.py  madelon_train.data  madelon_train.labels  qsar_androgen_receptor.csv  run_experiments.py  run_experiments_loss_margin_perceptron.py  run_experiments_loss_svm.py  run_experiments_mpc2023_nonsmooth.py  run_experiments_square_loss_lr.py  run_experiments_tanh_loss_lr.py  semeion.data
docs/demo/: demo.py  demo_cem.py  demo_hj.py  demo_lmcmaes.py  demo_maes.py  demo_nm.py  demo_prs.py  demo_rhc.py  maes.py
docs/efficiency/: comp_deap_cmaes.py  comp_deap_res.py  comp_deap_ses.py  compare_deap_de.py  compare_deap_de2.py  compare_deap_dea.py  compare_deap_eda.py  compare_deap_pso.py  compare_deap_pso_np.py  compare_deap_psonp.py  compare_deap_res.py  compare_deap_ses.py  compare_efficiency_sphere.py  compare_pypop7_de.py  compare_pypop7_eda.py  compare_pypop7_fmaes.py  compare_pypop7_lmcma.py  compare_pypop7_lmmaes.py  compare_pypop7_pso.py  compare_pypop7_res.py  compare_pypop7_saes.py  pypop7_lmmaes.py
docs/logo/: A-PPT-Report-on-PyPop7.pptx  PyPI-Downloads-Statistics-2022-05.txt  PyPI-Downloads-Statistics-2022-06.txt  PyPI-Downloads-Statistics-2022-07.txt  PyPI-Downloads-Statistics-2022-08.txt  PyPI-Downloads-Statistics-2022-09.txt  PyPI-Downloads-Statistics-2022-10.txt  PyPI-Downloads-Statistics-2022-11.txt  PyPI-Downloads-Statistics-2022-12.txt  PyPI-Downloads-Statistics-2023-01.txt  PyPI-Downloads-Statistics-2023-02.txt  README.md  (+1 more)
pypop7/: __init__.py
tutorials/: Lennard_Jones_cluster_optimization.py  README.md  bbob_optimization.py  benchmarking_lsbbo_1.py  benchmarking_lsbbo_2.py  coco_benchmarking.py  coco_optimization.py  coco_optimization.txt  gymnasium_optimization.py  lens_optimization.py  lens_shape_optimization.py  photonics_optimization.py  plot_2d_evolution_for_maes.py  plot_2d_landscape_for_multimodal_functions.py  plot_2d_landscape_for_nonseparable_functions.py  plot_2d_landscape_for_nonsmooth_functions.py  plot_2d_landscape_for_rotated_functions.py  plot_3d_landscape_for_multimodal_functions.py  plot_3d_landscape_for_nonsmooth_functions.py  plot_3d_landscape_for_rotated_functions.py  plot_evolution.py  plot_pure_nash_equilibria_for_ill_conditioned_functions.py  plot_pure_nash_equilibria_for_nonseparable_functions.py  plot_pure_nash_equilibria_for_nonsmooth_functions.py  plot_pure_nash_equilibria_for_rotated_functions.py  pykep_optimization.py
(+20798 files in other folders)
