[metadata]
name = pypop7
version = 0.0.3
author = Evolutionary-Intelligence Team (from CSE@SUSTech, Shenzhen, China)
author_email = 11749325@mail.sustech.edu.cn
description = pypop7 (Pure-PYthon library of POPulation-based OPtimization)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Evolutionary-Intelligence/pypop
project_urls =
    Bug Tracker = https://github.com/Evolutionary-Intelligence/pypop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages =
    pypop7/benchmarks
    pypop7/optimizers/core
    pypop7/optimizers/es
python_requires = >=3.8
install_requires =
    numpy >=1.21.4
    scipy >=1.8.1
