[metadata]
name = pypop7
version = 0.0.40
author = Evolutionary-Intelligence Team (from CSE@SUSTech, Shenzhen, China)
author_email = 11749325@mail.sustech.edu.cn
description = pypop7 (Pure-PYthon library of POPulation-based OPtimization)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Evolutionary-Intelligence/pypop
project_urls =
    Bug Tracker = https://github.com/Evolutionary-Intelligence/pypop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages =
    pypop7/benchmarks
    pypop7/optimizers/core
    pypop7/optimizers/es
    pypop7/optimizers/eda
    pypop7/optimizers/cem
    pypop7/optimizers/de
    pypop7/optimizers/pso
    pypop7/optimizers/ga
    pypop7/optimizers/ep
    pypop7/optimizers/ds
    pypop7/optimizers/rs
python_requires = >=3.5
install_requires =
    numpy>=1.21.4
    scipy>=1.5.1
    numba>=0.55.2
    matplotlib>=3.4.2
    seaborn>=0.11.1
    celluloid>=0.2.0
