[metadata]
name = pypop7
version = 0.0.72
author = Evolutionary-Intelligence Team (from CSE@SUSTech, Shenzhen, China)
author_email = 11749325@mail.sustech.edu.cn
description = pypop7 (Pure-PYthon library of POPulation-based OPtimization)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Evolutionary-Intelligence/pypop
project_urls =
    Bug Tracker = https://github.com/Evolutionary-Intelligence/pypop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages =
    pypop7/benchmarks
    pypop7/optimizers/core
    pypop7/optimizers/es
    pypop7/optimizers/nes
    pypop7/optimizers/eda
    pypop7/optimizers/cem
    pypop7/optimizers/de
    pypop7/optimizers/pso
    pypop7/optimizers/cc
    pypop7/optimizers/sa
    pypop7/optimizers/ga
    pypop7/optimizers/ep
    pypop7/optimizers/ds
    pypop7/optimizers/rs
    pypop7/optimizers/bo
python_requires = >=3.5
install_requires =
    numpy
    scipy
    scikit-learn
    numba
    torch
    matplotlib
    seaborn
    celluloid
    imageio
